# Rust_PlantUML_Tool

./: Cargo.toml  README.md
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
api-client/: Cargo.toml
api-client/src/: errors.rs  http_client.rs  lib.rs
api-client/tests/: http_client_test.rs
api-server/: Cargo.toml
api-server/src/: handlers.rs  main.rs  middleware.rs  models.rs
browser-app/: Cargo.toml  index.html  styles.css
browser-app/src/: main.rs
core/: Cargo.toml
core/src/: client.rs  lib.rs  models.rs  validation.rs
core/tests/: client_test.rs  models_test.rs
plantuml-client/: Cargo.toml
plantuml-client/src/: client.rs  errors.rs  lib.rs
plantuml-client/tests/: plantuml-client_tests.rs
specs/001-plantuml-web-editor/: axum-api-best-practices.md  data-model.md  plan.md  plantuml-integration-decision.md  quickstart.md  research.md  spec.md  spec_revised.md  tasks.md  yew-best-practices.md
specs/001-plantuml-web-editor/checklists/: requirements.md
specs/001-plantuml-web-editor/contracts/: api.yaml
storageservice/: Cargo.toml
storageservice/src/: lib.rs  local.rs
web-ui/: Cargo.toml  index.html  styles.css
web-ui/src/: errors.rs  lib.rs  messages.rs  model.rs
web-ui/src/components/: editor.rs  export_buttons.rs  mod.rs  preview.rs  save_button.rs  slot_list.rs
web-ui/src/model/: storage.rs
