[package]
name = "plantuml-editor-api-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
plantuml-editor-core = { path = "../core", default-features = false }
reqwest = { workspace = true, features = ["json"], default-features = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
mockito = "1.2"
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
serial_test = "3.0"  # 環境変数競合を防ぐ
